--- a/goal/goal/goal.vcxproj
+++ b/goal/goal/goal.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="galaxy_fighter\core\Context.cpp" />
+    <ClCompile Include="galaxy_fighter\BehaviorTree\BTNode.cpp" />
     <ClCompile Include="galaxy_fighter\objects\BaseObject.cpp" />
     <ClCompile Include="galaxy_fighter\BehaviorTree\BTAction_player\BTAction_player.cpp" />
     <ClCompile Include="galaxy_fighter\objects\camera\Camera.cpp" />
@@ -174,6 +176,7 @@
     <ClCompile Include="galaxy_fighter\utils\random_utils.cpp" />
     <ClCompile Include="gameObject\gameObject.cpp" />
     <ClCompile Include="galaxy_fighter\BehaviorTree\BTAction_physics\gravity_heavy.cpp" />
+    <ClCompile Include="galaxy_fighter\BehaviorTree\InputBuffer.cpp" />
     <ClCompile Include="main.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
@@ -191,8 +194,11 @@
     <ClCompile Include="galaxy_fighter\objects\playerObject\Player_GreenTofu.cpp" />
     <ClCompile Include="galaxy_fighter\objects\playerObject\PlayerState.cpp" />
     <ClCompile Include="galaxy_fighter\objects\playerObject\SpritePlayer.cpp" />
+    <ClCompile Include="galaxy_fighter\core\PhysicsEngine\QuadTree.cpp" />
+    <ClCompile Include="galaxy_fighter\utils\transformUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="galaxy_fighter\core\Context.h" />
     <ClInclude Include="galaxy_fighter\objects\BaseObject.h" />
     <ClInclude Include="galaxy_fighter\BehaviorTree\BTAction_player\BTAction_player.h" />
     <ClInclude Include="galaxy_fighter\objects\camera\Camera.h" />
@@ -220,6 +226,8 @@
     <ClInclude Include="gameObject\gameObject.h" />
     <ClInclude Include="galaxy_fighter\objects\environmentAssets\mapObject\MapObject.h" />
     <ClInclude Include="galaxy_fighter\BehaviorTree\BTAction_physics\gravity_heavy.h" />
+    <ClInclude Include="galaxy_fighter\BehaviorTree\InputBuffer.h" />
+    <ClInclude Include="json.hpp" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="galaxy_fighter\objects\MainMenuObject\MenuText.h" />
     <ClInclude Include="galaxy_fighter\objects\MainMenuObject\MenuImage.h" />
@@ -232,6 +240,11 @@
     <ClInclude Include="galaxy_fighter\objects\playerObject\Player_GreenTofu.h" />
     <ClInclude Include="galaxy_fighter\objects\playerObject\PlayerState.h" />
     <ClInclude Include="galaxy_fighter\objects\playerObject\SpritePlayer.h" />
+    <ClInclude Include="galaxy_fighter\core\PhysicsEngine\QuadTree.h" />
+    <ClInclude Include="galaxy_fighter\utils\transformUtils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="config.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
