更新了玩家动画行为树和精灵，但仍有究极多bug！！

--- a/goal/goal/config.json
+++ b/goal/goal/config.json
@@ -36,33 +36,129 @@
             "fileName": "player_tofu.png",
             "angle": 0.0
         },
-        "actionFrameDelay": {
-            "Idle": 250,
-            "Jump": 41,
-            "Down": 41,
-            "Left": 41,
-            "Right": 82
-        },
+        "actionFrameDelay": [
+            250,
+            250,
+            250,
+            250,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41,
+            41
+        ],
         "spriteSheet": {
             "Idle": {
                 "startFrame": 0,
-                "endFrame": 4
+                "pre": 0,
+                "running": 4,
+                "post": 0,
+                "endFrame": 4,
+                "isLoop": true
             },
             "Jump": {
-                "startFrame": 16,
-                "endFrame": 47
+                "startFrame": 0,
+                "pre": 0,
+                "running": 4,
+                "post": 0,
+                "endFrame": 4,
+                "isLoop": false
             },
             "Left": {
-                "startFrame": 6,
-                "endFrame": 15
+                "startFrame": 0,
+                "pre": 0,
+                "running": 4,
+                "post": 0,
+                "endFrame": 4,
+                "isLoop": true
             },
             "Down": {
-                "startFrame": 50,
-                "endFrame": 77
+                "startFrame": 0,
+                "pre": 0,
+                "running": 4,
+                "post": 0,
+                "endFrame": 4,
+                "isLoop": false
             },
             "Right": {
-                "startFrame": 6,
-                "endFrame": 15
+                "startFrame": 5,
+                "pre": 2,
+                "running":15 ,
+                "post": 0,
+                "endFrame": 17,
+                "isLoop": true
             }
         },
         "behavior_tree": {
